2022-01-20  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-ealias): new function.

2022-01-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-use-red-stars, ee-use-red-bullets): use
	`redisplay' and display a message.

2022-01-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (find-2022findeevanggvideo): new function.

2022-01-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-testblocks.el (ee-insert-test-fennel-mode): new function.
	(ee-insert-test-gnuplot-mode): new function.

	* eepitch.el (eepitch-fennel): new function.

	* eev-tlinks.el (find-red-star-links): Added instructions for
	using `M-x ee-use-red-bullets' and `M-x ee-use-red-stars'.

2022-01-10  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-testblocks.el (ee-insert-test-latex-mode): new function.

2022-01-09  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-eppp-with-prefix): new function.
	(find-eregionpp): new function.
	(find-ebuffercontents, ee-buffer-contents, ee-buffer-contents0):
	new functions.
	(find-ebufferlocalvars): new function.

2022-01-07  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-testblocks.el (ee-insert-test-makefile-gmake-mode): new
	function.

2022-01-05  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-testblocks.el (ee-insert-test-makefile-mode): new function.

	* eev-videolinks.el (find-2022eevmake0video): new function.

2022-01-04  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (find-pdftoolsr-page): new function.

2022-01-03  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (find-xpdf-page): define it explicitly.
	(find-pdftools-page): rewritten. The new version always calls
	`revert-buffer' and it uses `pdf-loader-install' instead of
	`pdf-tools-install'.

2021-12-26  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (find-2021ffllvideo): new function.

2021-12-19  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-ekbmacro-links): small changes.