@@ -619,6 +619,35 @@ instead of inserting."
   𝐘 cY \\mathbf{Y}
   𝐙 cZ \\mathbf{Z}
 
+  face: ee-composes-face-math
+  ₀ _0 {{}_0}
+  ₁ _1 {{}_1}
+  ₂ _2 {{}_2}
+  ₃ _3 {{}_3}
+  ₄ _4 {{}_4}
+  ₅ _5 {{}_5}
+  ₆ _6 {{}_6}
+  ₇ _7 {{}_7}
+  ₈ _8 {{}_8}
+  ₉ _9 {{}_9}
+  ₊ _+ {{}_+}
+  ₋ _- {{}_-}
+  ₌ _= {{}_=}
+  ₍ _( {{}_(}
+  ₎ _) {{}_)}
+  ₐ _a {{}_a}
+  ₑ _e {{}_e}
+  ₒ _o {{}_o}
+  ₓ _x {{}_x}
+  ₕ _h {{}_h}
+  ₖ _k {{}_k}
+  ₗ _l {{}_l}
+  ₘ _m {{}_m}
+  ₙ _n {{}_n}
+  ₚ _p {{}_p}
+  ₛ _s {{}_s}
+  ₜ _t {{}_t}
+
 
 ")
 
